remember me alignment fixed

--- a/certification_app/app/assets/stylesheets/styles.scss
+++ b/certification_app/app/assets/stylesheets/styles.scss
@@ -1407,6 +1407,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   border-radius: 0;
   box-shadow: none;
   font-size: 15px;
+  display: inherit;
 }
 
 .form-group {
